--- a/eval.ipynb
+++ b/eval.ipynb
@@ -28,7 +28,11 @@
     "# 安装huggingface库以及第三方包\n",
     "!pip install diffusers\n",
     "!pip install transformers scipy ftfy accelerate\n",
-    "!pip install onnxruntime-gpu"
+    "!pip install onnxruntime-gpu\n",
+    "\n",
+    "# 解压模型权重\n",
+    "!unzip /root/autodl-fs/epoch19.zip /root/autodl-tmp/\n",
+    "!unzip /root/autodl-fs/reg.zip /root/autodl-tmp/"
    ]
   },
   {
